docs/versioned_docs/version-1.2.5/reference/messages.mdx
<!-- Generated by port_legacy_docs.py v2 from v1.2.5 (d226d745169891f79b1a767ebbc64dc51143d178). Historical snapshot—do not edit directly. -->

<a id="messages"></a>
# Messages

**Messages** are the top-level objects you send to Slack. `slackblocks` provides several message types depending on the API surface you're targeting:

| Class                | When to use it                                                                                  |
|----------------------|-------------------------------------------------------------------------------------------------|
| `Message`            | Posting a normal message via `chat.postMessage` (the most common case).                         |
| `WebhookMessage`     | Sending to an [Incoming Webhook](https://api.slack.com/messaging/webhooks) URL.                 |
| `MessageResponse`    | Replying to a slash command or an interaction `response_url`.                                   |

All three implement `__getitem__`/`keys()`, so you can unpack them with `**message` straight into the Slack SDK. See [Sending Messages](/v1.2.5/usage/sending_messages) for end-to-end examples.

Slack reference: [https://api.slack.com/methods/chat.postMessage](https://api.slack.com/methods/chat.postMessage)

### Message {#messages.Message}

**Class**

```python
Message(channel: str, text: Optional[str] = '', blocks: Optional[Union[List[Block], Block]] = None, attachments: Optional[List[Attachment]] = None, thread_ts: Optional[str] = None, mrkdwn: bool = True, unfurl_links: Optional[bool] = None, unfurl_media: Optional[bool] = None)
```

<div className="api-docstring">

A Slack message object that can be converted to a JSON string for use with
the Slack message API.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `channel` | `str` | the Slack channel to send the message to, e.g. "#general". |
| `text` | `Optional[str]` | markdown text to send in the message. If `blocks` are provided<br />then this is a fallback to display in notifications. |
| `blocks` | `Optional[Union[List[Block], Block]]` | a list of [`Blocks`](/v1.2.5/reference/blocks) to form the contents<br />of the message instead of the contents of `text`. |
| `attachments` | `Optional[List[Attachment]]` | a list of<br />[`Attachments`](/v1.2.5/reference/attachments/#attachments.Attachment)<br />that form the secondary contents of the message (deprecated). |
| `thread_ts` | `Optional[str]` | the timestamp ID of another unthreaded message that will<br />become the parent message of this message (now a reply in a thread). |
| `mrkdwn` | `bool` | if `True` the contents of `text` will be rendered as markdown<br />rather than plain text. |
| `unfurl_links` | `Optional[bool]` | if `True`, links in the message will be automatically<br />unfurled. |
| `unfurl_media` | `Optional[bool]` | if `True`, media from links (e.g. images) will<br />automatically unfurl. |

Raises:
    InvalidUsageException: in the event that the items passed to `blocks`
        are not valid [`Blocks`](/v1.2.5/reference/blocks).

</div>

### MessageResponse {#messages.MessageResponse}

**Class**

```python
MessageResponse(text: Optional[str] = '', blocks: Optional[Union[List[Block], Block]] = None, attachments: Optional[List[Attachment]] = None, thread_ts: Optional[str] = None, mrkdwn: bool = True, replace_original: bool = False, ephemeral: bool = False)
```

<div className="api-docstring">

A required, immediate response that confirms your app received the payload.

</div>

### ResponseType {#messages.ResponseType}

**Class**

```python

```

<div className="api-docstring">

Types of messages that can be sent via `WebhookMessage`.

</div>

### WebhookMessage {#messages.WebhookMessage}

**Class**

```python
WebhookMessage(text: Optional[str] = None, attachments: Optional[Union[Attachment, List[Attachment]]] = None, blocks: Optional[Union[Block, List[Block]]] = None, response_type: Optional[Union[ResponseType, str]] = None, replace_original: Optional[bool] = None, delete_original: Optional[bool] = None, unfurl_links: Optional[bool] = None, unfurl_media: Optional[bool] = None, metadata: Optional[Dict[str, Any]] = None, headers: Optional[Dict[str, str]] = None)
```

<div className="api-docstring">

Messages sent via the Slack `WebhookClient` takes different arguments than
    those sent via the regular `WebClient`.

See: [https://github.com/slackapi/python-slack-sdk/blob/7e71b73/slack_sdk/webhook/client.py#L28](https://github.com/slackapi/python-slack-sdk/blob/7e71b73/slack_sdk/webhook/client.py#L28)

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `Optional[str]` | markdown text to send in the message. If `blocks` are provided<br />then this is a fallback to display in notifications. |
| `attachments` | `Optional[Union[Attachment, List[Attachment]]]` | a list of<br />[`Attachments`](/v1.2.5/reference/attachments/#attachments.Attachment)<br />that form the secondary contents of the message (deprecated). |
| `blocks` | `Optional[Union[Block, List[Block]]]` | a list of [`Blocks`](/v1.2.5/reference/blocks) to form the contents<br />of the message instead of the contents of `text`. |
| `response_type` | `Optional[Union[ResponseType, str]]` | one of `ResponseType.EPHEMERAL` or `ResponseType.IN_CHANNEL`.<br />Ephemeral messages are shown only to the requesting user whereas<br />"in-channel" messages are shown to all channel participants. |
| `replace_original` | `Optional[bool]` | when `True`, the message triggering this response will be<br />replaced by this message. Mutually exclusive with `delete_original`. |
| `delete_original` | `Optional[bool]` | when `True`, the original message triggering this response<br />will be deleted, and any content of this message will be posted as a<br />new message. Mutually exclusive with `replace_original`. |
| `unfurl_links` | `Optional[bool]` | if `True`, links in the message will be automatically<br />unfurled. |
| `unfurl_media` | `Optional[bool]` | if `True`, media from links (e.g. images) will<br />automatically unfurl. |
| `metadata` | `Optional[Dict[str, Any]]` | additional metadata to attach to the message. |
| `headers` | `Optional[Dict[str, str]]` | HTTP request headers to include with the message. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when any of the passed fields fail validation. |

</div>
